--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1046,14 +1046,12 @@ body {
 }
 
 #pk-ending {
-	display:none;
 	width:100%;
 	height:100%;
 	position:absolute;
-	top:0;
+	top:100%;
 	left:0;
 	z-index:99999;
-	/*background:red;*/
 	background:url('../images/background_1.png') no-repeat;
 	background-size:100%;
 }
@@ -1083,7 +1081,7 @@ body {
 	height:100px;
 	border-radius:0 50px 50px 0;
 }
-#left-user .bg_2 .nickname {
+#left-nickname {
 	width:120px;
 	text-align:center;
 	font-size:16px;
@@ -1091,7 +1089,7 @@ body {
 	line-height:30px;
 	color:#fff;
 }
-#left-user .bg_2 .lv {
+#left-lv {
 	width:120px;
 	text-align:center;
 	font-size:16px;
@@ -1099,7 +1097,7 @@ body {
 	line-height:30px;
 	color:#fff;
 }
-#left-user .bg_2 .true-num {
+#left-true-num {
 	height:40px;
 	line-height:40px;
 	background-color:#fff;
@@ -1139,7 +1137,7 @@ body {
 	border-radius:50px 0 0 50px;
 	float:right;
 }
-#right-user .bg_2 .nickname {
+#right-nickname {
 	width:120px;
 	text-align:center;
 	font-size:16px;
@@ -1148,7 +1146,7 @@ body {
 	color:#fff;
 	float:right;
 }
-#right-user .bg_2 .lv {
+#right-lv {
 	width:120px;
 	text-align:center;
 	font-size:16px;
@@ -1157,7 +1155,7 @@ body {
 	color:#fff;
 	float:right;
 }
-#right-user .bg_2 .true-num {
+#right-true-num {
 	height:40px;
 	line-height:40px;
 	background-color:#fff;
