--- a/web/css/index.css
+++ b/web/css/index.css
@@ -145,7 +145,7 @@ body {
 	left:0;
 	width:100%;
 	background-color:#fff;
-	z-index:999;
+	z-index:99999999;
 	font-size:0.72rem;
 	padding-top:30px;
 	display:none;
@@ -1199,6 +1199,7 @@ body {
 	color:#fff;
 }
 #pk-again {
+	display:none;
 	position:relative;
 	top:30%;
 	width:200px;
@@ -1211,6 +1212,7 @@ body {
 	font-size:18px;
 }
 #go-index {
+	display:none;
 	position:relative;
 	top:32%;
 	width:200px;
